<resources>
    <string name="app_name">My Application</string>
    <string name="message">message</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="team_a_name">TeamA</string>
    <string name="team_b_name">TeamB</string>

    <string name="scoreA" translatable="false">0</string>
    <string name="scoreB" translatable="false">0</string>
    <!--    <string name="button1" translatable="false">+1</string>-->
    <!--    <string name="button2" translatable="false">+2</string>-->
    <!--    <string name="button3" translatable="false">+3</string>-->
    <string name="MY_DATA" translatable="false">my_data</string>
    <string name="MY_KEY" translatable="false">my_key</string>
    <string name="button_plus" translatable="false">+</string>
    <string name="button_sub" translatable="false">-</string>
    <string name="data_key" translatable="false">DATA_KEY</string>
    <string name="shp_name" translatable="false">shp_name</string>
    <string name="title_activity_navigation" translatable="false">NavigationActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world" translatable="false">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="back" translatable="false">返回</string>
    <string name="title_message">Calculation Test</string>
    <string name="title_button_message">Enter</string>
    <string name="high_scre_message">High Score:%d</string>
    <string name="button0" translatable="false">0</string>
    <string name="button1" translatable="false">1</string>
    <string name="button2" translatable="false">2</string>
    <string name="button3" translatable="false">3</string>
    <string name="button4" translatable="false">4</string>
    <string name="button5" translatable="false">5</string>
    <string name="button6" translatable="false">6</string>
    <string name="button7" translatable="false">7</string>
    <string name="button8" translatable="false">8</string>
    <string name="button9" translatable="false">9</string>
    <string name="buttonCancel" translatable="false">C</string>
    <string name="buttonSumbit">OK</string>
    <string name="equal_symbol" translatable="false">=</string>
    <string name="question_mark" translatable="false">\?</string>
    <string name="current_score">Score:%d</string>
    <string name="input_indicator">Your Answer:</string>
    <string name="lose_message">Your Lose!</string>
    <string name="win_message">Your Win!</string>
    <string name="lose_score_message">Your Score:%d</string>
    <string name="win_score_message">New Record:%d</string>
    <string name="button_back_to_title">Back</string>
    <string name="answer_correct_message">Correct!go on!</string>
    <string name="quit_dialog_title">Are you sure to quit?</string>
    <string name="dialog_positive_message">OK</string>
    <string name="dialog_negative_message">Cancel</string>

    <string name="title_nav_message">welcome</string>
    <string name="question_nav_message">question</string>
    <string name="lose_nav_message">lose</string>
    <string name="win_nav_message">win</string>
    <!-- Calculator -->
    <string name="type_operand_one_hint">Type Operand 1</string>
    <string name="type_operant_two_hint">Type Operand 2</string>
    <string name="add_operation_text">Add</string>
    <string name="sub_operation_text">Sub</string>
    <string name="div_operation_text">Div</string>
    <string name="mul_operation_text">Mul</string>
    <string name="computationError">Error</string>
    <string name="title_activity_navigation1">ActivityNavigation1</string>
    <string name="title_activity_base">BaseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="local_picture">本地图片</string>
    <string name="sd_picture">SD卡图片</string>
    <string name="net_picture">网络图片</string>
    <string name="circle_picture">圆形图片</string>

</resources>
