<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="com.example.myapplication.glide.GlideTestViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".glide.GlideTestActivity">

        <Button
            android:id="@+id/local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/local_picture"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sd"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.036" />

        <Button
            android:id="@+id/net"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/net_picture"
            app:layout_constraintBottom_toBottomOf="@+id/sd"
            app:layout_constraintEnd_toStartOf="@+id/circle"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/sd"
            app:layout_constraintTop_toTopOf="@+id/sd" />

        <Button
            android:id="@+id/sd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sd_picture"
            app:layout_constraintBottom_toBottomOf="@+id/local"
            app:layout_constraintEnd_toStartOf="@+id/net"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/local"
            app:layout_constraintTop_toTopOf="@+id/local"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/circle_picture"
            app:layout_constraintBottom_toBottomOf="@+id/net"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/net"
            app:layout_constraintTop_toTopOf="@+id/net" />

        <ImageView
            android:id="@+id/local_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/sd_imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sd_imageView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/sd_imageView"
            app:layout_constraintVertical_bias="0.0"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/net_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/circle_imageView"
            app:layout_constraintEnd_toStartOf="@+id/circle_imageView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/sd_imageView"
            app:layout_constraintTop_toTopOf="@+id/circle_imageView"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/sd_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/net_imageView"
            app:layout_constraintEnd_toStartOf="@+id/net_imageView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/local_imageView"
            app:layout_constraintTop_toTopOf="@+id/net_imageView"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/circle_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/net_imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.179"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>